# simple-buffer

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
include/: buffer.h  clooper.h  options.h  util.h
source/: buffer.cpp  options.cpp  util.cpp
test/: test_basic_options.cpp
